# pv-prospect

./: .gitignore  .pre-commit-config.yaml  2026-04-03.txt  2026-04-09-2131.txt  2026-04-10-140911-what-were-the-manual-steps-i-needed-to-do.txt  2026-04-10-163245.txt  2026-04-11-103143-wip.txt  CLAUDE.md  LICENSE  README.md  TODO.md  ruff.toml
data-exploration/: README  README.md  TODO.md  dni-comparison.ipynb  ghi-analysis.ipynb  helpers.py  linear-regression.ipynb  pyproject.toml  weather-data-comparison.ipynb
data-exploration/irradiance/: README.md  dni_models.py  sunniest-days-analysis.ipynb
data-exploration/main_models/: common.py  neural-network.ipynb  pca.ipynb  regression.ipynb
data-exploration/poa_and_power_correlation/: poa-power-analysis.ipynb  poa-power-correlation.ipynb  worst-correlation-analysis.ipynb
data-exploration/resources/dqydj/: dqydj-solar-irradiance-20221215.csv  dqydj-solar-irradiance-20230608.csv  dqydj-solar-irradiance-20230905.csv  dqydj-solar-irradiance-20250302.csv
data-exploration/utils/: check_device.py  check_nans.ipynb
data-exploration/weather/: README.md  compare_visual_crossing_csvs.py
data-pipeline/: .gitignore  Dockerfile  README  README.md  docker-compose.yml  pyproject.toml  pytest.ini
data-pipeline/data_pipeline/: config.py
data-pipeline/data_pipeline/domain/: date_range.py  location.py
data-pipeline/data_pipeline/extractors/: __init__.py  base.py  data_sources.py  openmeteo.py  pvoutput.py
data-pipeline/data_pipeline/loaders/: __init__.py  factory.py  gdrive.py  helpers.py  local.py
data-pipeline/data_pipeline/processing/: __init__.py  producer.py  serialization.py  task_queuer.py  tasks.py  value_objects.py  worker.py
data-pipeline/data_pipeline/resources/: etl_config.yaml  pv_sites.csv
data-pipeline/data_pipeline/util/: create_dir.py  find_data_gaps.py  pvoutput_insert_header.py  remove_duplicate_csvs.py  rename_files.py  retry.py  upload_file.py
data-pipeline/exploration/: helpers.py  weather-data-comparison.ipynb  weather_data_comparison.py
data-pipeline/src/: main.py  processing.py
data-pipeline/src/domain/: __init__.py  pv_site.py
data-pipeline/src/extractors/: __init__.py  openmeteo.py  pvoutput.py  visualcrossing.py
data-pipeline/src/loaders/: gdrive.py  helpers.py  local.py  upload_helpers.py
data-pipeline/src/processing/: __init__.py  processing_stats.py  pv_site_repo.py  tasks.py  value_objects.py
data-pipeline/src/transform/: __init__.py  combine_csvs.py
data-pipeline/src/util/: pvoutput_insert_header.py  rename_files.py
data-transformation/: .gitignore  pyproject.toml
data-transformation/data_transformation/: __init__.py  combine_csvs.py  two_key_dict.py
data-transformation/tests/unit/: test_two_key_dict.py
pv-prospect-app/: Dockerfile  README.md  cloudbuild.yaml  openapi.yaml  pyproject.toml
pv-prospect-app/pv_prospect/app/: __init__.py  chain.py  config.py  elevation.py  main.py  poa.py  rate_limit.py  resources.py  store.py  validation.py
pv-prospect-app/scripts/: measure_yield.py
pv-prospect-app/tests/acceptance/: conftest.py  test_predict_routes.py  test_predict_site_smoke.py  test_rate_limit.py  test_shell_routes.py  test_validate_routes.py  test_validate_site_smoke.py
pv-prospect-common/: README.md  pyproject.toml
pv-prospect-common/pv_prospect/common/: __init__.py  config_parser.py  env_mapper.py  interpolation.py  location_mapping.py  logging_config.py  openmeteo_bounding_box_repo.py  pv_site_repo.py
pv-prospect-common/tests/unit/: test_location_mapping.py  test_openmeteo_bounding_box_repo.py
pv-prospect-data-extraction/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pv-prospect-data-extraction/doc/: runbooks.md
pv-prospect-data-extraction/doc/runbooks/: resume-pv-sites-backfill.md  resume-weather-grid-backfill.md
pv-prospect-data-extraction/pv_prospect/data_extraction/: __init__.py  base.py  config.py  data_sources.py  factory.py  resources.py
pv-prospect-data-extraction/resources/: config-default.yaml  config-local.yaml
pv-prospect-data-extraction/tests/unit/: test_core.py
pv-prospect-data-sources/: README.md  pyproject.toml
pv-prospect-data-sources/pv_prospect/data_sources/: __init__.py  config.py  constants.py  data_source.py  grid_point_resolver.py  paths.py  resolvers.py  resources.py  source_descriptor.py
pv-prospect-data-sources/resources/: config-default.yaml
pv-prospect-data-transformation/: .gitignore  Dockerfile  README.md  pyproject.toml
pv-prospect-data-transformation/doc/: runbooks.md
pv-prospect-data-transformation/doc/runbooks/: re-base-corpus.md  replay-window.md  resume-transform-backfill.md  seed-validation-window.md
pv-prospect-data-transformation/pv_prospect/data_transformation/: core.py  (+22 more)
pv-prospect-data-transformation/resources/: config-default.yaml  config-local.yaml
pv-prospect-data-transformation/scripts/: seed_validation_window.py
pv-prospect-data-versioner/: Dockerfile  README.md  pyproject.toml
pv-prospect-etl/: README.md  pyproject.toml
pv-prospect-etl/scripts/: cleanup_empty_folders.py
pv-prospect-map/: README.md  pyproject.toml
pv-prospect-model/: README.md  pyproject.toml
pv-prospect-model-trainer/: Dockerfile  README.md  pyproject.toml
pv-prospect-physics/: README.md  pyproject.toml
pv-prospect-versioning/: README.md  pyproject.toml
uk-geo/: README.md  pyproject.toml  uk_geo.py
uk-geo/point_samples/: sample_000.csv  sample_001.csv  sample_002.csv  sample_003.csv  sample_004.csv  sample_005.csv  sample_006.csv  sample_007.csv  sample_008.csv  sample_009.csv  sample_010.csv  sample_011.csv  sample_012.csv  sample_013.csv  sample_014.csv  sample_015.csv  sample_016.csv  sample_017.csv  sample_018.csv  sample_019.csv  sample_020.csv  sample_021.csv  sample_022.csv  sample_023.csv  sample_024.csv  sample_025.csv  sample_026.csv  sample_027.csv  sample_028.csv  sample_029.csv  sample_030.csv  sample_031.csv
util/check-workflow/: README.md  check_workflow.py  pyproject.toml
util/seed-validation-window/: README.md  pyproject.toml  seed_validation_window.py
(+598 files in other folders)
