[virtualenvs]
in-project = true

[tool.poetry]
name = "PV Prospect Data Exploration"
version = "0.1.0"
description = ""
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
notebook = "^7.4.7"
matplotlib = "^3.8.0"
scikit-learn = "^1.7.2"
solarpy = "==0.1.3"
spherical-coordinates = "==0.1.8"
pvlib = "^0.13.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
