[tool.poetry]
name = "pv-prospect-app"
version = "0.1.0"
description = "Prediction API: weather → POA → PV chain for energy-yield estimates"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-app"
version = "0.1.0"
description = "Prediction API: weather → POA → PV chain for energy-yield estimates"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pv-prospect-common",
    "pv-prospect-etl",
    "pv-prospect-model",
    "pv-prospect-physics",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "slowapi>=0.1.9,<1",
    "pandas>=2.0,<3",
    "torch>=2.0.0,<3",
    "google-cloud-storage>=3.0,<4",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
pv-prospect-etl = {path = "../pv-prospect-etl", develop = true}
pv-prospect-model = {path = "../pv-prospect-model", develop = true}
pv-prospect-physics = {path = "../pv-prospect-physics", develop = true}
pandas = ">=2.0,<3"
fastapi = ">=0.115,<1"
uvicorn = {version = ">=0.30,<1", extras = ["standard"]}
httpx = ">=0.27,<1"
slowapi = ">=0.1.9,<1"
torch = {version = "^2.0", source = "pytorch-cpu"}
google-cloud-storage = ">=3.0,<4"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = ">=8.2,<10"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
