[tool.poetry]
name = "pv-prospect-common"
version = "0.2.0"
description = "Shared common models for PV Prospect projects"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-common"
version = "0.2.0"
description = "Shared common models for PV Prospect projects"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spherical-coordinates>=0.1.8,<0.2",
    "numpy>=2.3.5,<3",
    "pyyaml>=6.0,<7",
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
