[tool.poetry]
name = "pv-prospect-data-extraction"
version = "0.1.0"
description = ""
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-data-extraction"
version = "0.1.0"
description = ""
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5,<3",
    "google-api-python-client>=2.184.0,<3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib>=1.2.2,<2",
    "google-cloud-storage>=2.18,<3",
    "importlib_resources>=6.5.2,<7",
    "celery>=5.5.3,<6",
    "flower>=2.0.1,<3",
    "pyyaml>=6.0.3,<7",
    "pv-prospect-common",
    "pv-prospect-etl",
]

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
pv-prospect-etl = {path = "../pv-prospect-etl", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
