[virtualenvs]
in-project = true

[tool.poetry]
name = "PV Prospect Data Transformation Pipeline"
version = "0.1.0"
description = ""
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
solarpy = "^0.1.3"
pvlib = "^0.11.0"
pandas = "^2.0.0"
numpy = "^2.3.5"
common = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
