[tool.poetry]
name = "pv-prospect-etl"
version = "0.1.0"
description = "ETL components for PV Prospect projects"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-etl"
version = "0.2.0"
description = "ETL components for PV Prospect projects"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=2.14.0",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pv-prospect-common",
]

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-storage = "^2.14.0"
pyyaml = "^6.0.3"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
