[tool.poetry]
name = "pv-prospect-map"
version = "0.1.0"
description = "Offline UK PV capacity-factor map generation (weather → POA → PV over a grid)"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-map"
version = "0.1.0"
description = "Offline UK PV capacity-factor map generation (weather → POA → PV over a grid)"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pv-prospect-common",
    "pv-prospect-model",
    "pv-prospect-physics",
    "torch>=2.0,<3",
    "numpy>=2.0,<3",
    "pandas>=2.0,<3",
    "httpx>=0.27,<1",
    "matplotlib>=3.8,<4",
    "shapely>=2.0,<3",
    "pyshp>=2.3,<3",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
pv-prospect-model = {path = "../pv-prospect-model", develop = true}
pv-prospect-physics = {path = "../pv-prospect-physics", develop = true}
torch = {version = "^2.0", source = "pytorch-cpu"}
numpy = ">=2.0,<3"
pandas = ">=2.0,<3"
httpx = ">=0.27,<1"
matplotlib = "^3.8"
shapely = "^2.0"
pyshp = "^2.3"

[project.scripts]
capacity-factor-map = "pv_prospect.map.entrypoint:main"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
