[tool.poetry]
name = "pv-prospect-model-trainer"
version = "0.1.0"
description = "Bootstrap and scheduled retraining of the PV and weather models"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-model-trainer"
version = "0.1.0"
description = "Bootstrap and scheduled retraining of the PV and weather models"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pv-prospect-common",
    "pv-prospect-model",
    "pv-prospect-versioning",
    "torch>=2.0.0,<3",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
pv-prospect-model = {path = "../pv-prospect-model", develop = true}
pv-prospect-versioning = {path = "../pv-prospect-versioning", develop = true}
torch = {version = "^2.0", source = "pytorch-cpu"}

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
