[tool.poetry]
name = "pv-prospect-model"
version = "0.1.0"
description = ""
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-model"
version = "0.1.0"
description = ""
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0,<3",
    "scikit-learn>=1.3,<2",
    "pandas>=2.0.0,<3",
    "numpy>=2.3.5,<3",
    "pv-prospect-common",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
torch = {version = "^2.0", source = "pytorch-cpu"}
scikit-learn = "^1.3"
pandas = "^2.0"
numpy = "^2.3"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
