[tool.poetry]
name = "pv-prospect-physics"
version = "0.1.0"
description = "Shared solar-irradiance physics (plane-of-array) for PV Prospect"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-physics"
version = "0.1.0"
description = "Shared solar-irradiance physics (plane-of-array) for PV Prospect"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pvlib>=0.11.0,<0.12",
    "pandas>=2.0.0,<3",
    "numpy>=2.3.5,<3",
    "pv-prospect-common",
]

[tool.poetry.dependencies]
python = "^3.12"
pv-prospect-common = {path = "../pv-prospect-common", develop = true}
pvlib = "^0.11.0"
pandas = "^2.0"
numpy = "^2.3"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
