[tool.poetry]
name = "pv-prospect-versioning"
version = "0.1.0"
description = "Shared git + DVC + SSH operations for versioning a DVC-tracked repo"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
readme = "README.md"
packages = [{include = "pv_prospect"}]

[project]
name = "pv-prospect-versioning"
version = "0.1.0"
description = "Shared git + DVC + SSH operations for versioning a DVC-tracked repo"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[gs]>=3,<4",
    "gitpython>=3,<4",
    "pyyaml>=6.0,<7",
]

[tool.poetry.dependencies]
python = "^3.12"
dvc = {version = "^3", extras = ["gs"]}
gitpython = "^3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
pytest = "^9.0.1"
types-pyyaml = "^6.0.12.20260408"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
