[tool.poetry]
name = "check-workflow"
version = "0.1.0"
description = "Compare manifests vs ledgers for all workflows on a given date"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
packages = [{include = "check_workflow"}]

[project]
name = "check-workflow"
version = "0.1.0"
description = "Compare manifests vs ledgers for all workflows on a given date"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
requires-python = ">=3.12"
dependencies = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
check-workflow = "check_workflow:main"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }
bandit = { version = "^1.9", extras = ["toml"] }

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
