[tool.poetry]
name = "seed-validation-window"
version = "0.1.0"
description = "One-time seed for the validation window artifact"
authors = ["RJ Ferrier <rjferrier@outlook.com>"]
packages = [{include = "seed_validation_window.py"}]

[project]
name = "seed-validation-window"
version = "0.1.0"
description = "One-time seed for the validation window artifact"
authors = [{name = "RJ Ferrier", email = "rjferrier@outlook.com"}]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0,<3",
    "google-cloud-storage>=2.0,<3",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.0,<3"
google-cloud-storage = ">=2.0,<3"

[tool.poetry.scripts]
seed-validation-window = "seed_validation_window:main"

[tool.poetry.group.dev.dependencies]
ruff = { version = "^0.13" }
mypy = { version = "^1.18" }

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
